[package]
name = "h3-ntai"
version = "0.1.0"
edition = "2024"

[lib]
name="h3_ntai"
path="src/lib.rs"

[[example]]
name="server"
path="examples/server.rs"

[[example]]
name="client"
path="examples/client.rs"

[dependencies]
quiche = { version = "0.26.1", features = ["boringssl-boring-crate"] }
tokio = { version = "1.49", features = ["full"] }
bytes = "1.11.1"
ring = "0.17.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
dashmap = "6.1.0"
rand = "0.10.0"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4.5"
